# advent-of-code-2018

advent_of_code_2018/: CMakeLists.txt  CMakeSettings.json
advent_of_code_2018/1_chronal_calibration/: CMakeLists.txt  part1.cpp  part2.cpp
advent_of_code_2018/2_inventory_management_system/: CMakeLists.txt  part1.cpp  part2.cpp
advent_of_code_2018/3_no_matter_how_you_slice_it/: CMakeLists.txt  part1.cpp  part2.cpp
advent_of_code_2018/include/: lift.hpp  tuple_drop.hpp
